# Web-Service-Python

./: .env-copy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SSH-SETUP.md  docker-compose-debug.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  requirements.txt
.github/: RELEASE_CHECKLIST.md  release-template.md
.github/workflows/: auto-release.yml  ci.yml  release.yml  ruff.yml
alembic/: env.py
alembic/versions/: cbf112934370_added_s3_table.py
docker/fastapi-service/: DockerFile  start-debug.sh  start.sh
docker/postgres/init/: init-multidb.sh
nginx/: app-dev.conf  app.conf
scripts/: backup.sh  bump-version.sh  common.sh  init-ssl.sh  migrate-to-uv.sh  monitor.sh  update-changelog.sh
src/: auth.py  cache.py  celery.py  config.py  database.py  error_handlers.py  exceptions.py  logger.py  main.py  middleware.py  redis.py  s3.py  templates.py  utils.py  validation.py
src/models/: __init__.py  base.py  database.py  s3.py  user.py
src/routes/: auth.py  index.py  s3.py
src/static/: base.css
src/templates/: base.html  index.html
src/tests/: conftest.py  test_auth.py  test_basic.py  test_celery.py  test_config.py  test_main.py  test_models.py  test_routes.py  test_s3.py  test_utils.py  utils.py
